Don't initialize V8 in the GPU process.

Don't initialize V8 in the GPU process, V8 should not be used there.

BUG=690200

Review-Url: https://codereview.chromium.org/2687683006
Cr-Commit-Position: refs/heads/master@{#449348}

Former-commit-id: 15ffa4689839fa575de38a25c89780450b83e9d0